student list alignment issue fix

--- a/css/templatemo-festava-live.css
+++ b/css/templatemo-festava-live.css
@@ -2246,6 +2246,7 @@ strong {
 }
 .studentList div ul li {
   color: rgb(212, 212, 212);
+  text-align: center;
 }
 
 @media screen and (max-width: 991px) {
